Stop refactor